crates/keron-lang/tests/corpus/errors/parse/double_comma_list.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found ',' expected something else, '#', '-', 'r', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, '(', or ']'
  --> 1:14
  |
1 | val xs = [1, , 2]
  |              ^
